New delete all option!
