# services/api/api.go
@@ -33,6 +33,7 @@ func (api API) addAnonymousRoutes(r chi.Router) {
 func (api API) addProtectedRoutes(r chi.Router) {
 	r.Post("/api/monitors", api.createMonitor)
 	r.Post("/api/monitors/import", api.importMonitors)
+	r.Delete("/api/monitors", api.deleteMonitors)
 	r.Delete("/api/monitors/{id}", api.deleteMonitor)
 	r.Put("/api/monitors/{id}", api.updateMonitor)
 }
